2005-12-06  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/BoxLayout/maximumLayoutSize2.java: New file.

2005-12-06  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/java/awt/BorderLayout/maxLayoutSize.java: New file.

2005-12-06  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/createActionMap.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/createFilterComboBoxModel.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getApproveButton.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getBottomPanel.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getButtonPanel.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getFileName.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getMaximumSize.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getMinimumSize.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/getPreferredSize.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/MyMetalFileChooserUI.java: 
	New file,
	* gnu/testlet/javax/swing/plaf/metal/MetalFileChooserUI/setFileName.java: 
	New file.

2005-12-05  Anthony Green  <green@redhat.com>

	* gnu/testlet/java/nio/DoubleBuffer/compareTo.java: New test.
	* gnu/testlet/java/nio/FloatBuffer/compareTo.java: New test.

2005-12-05  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JPanel/setBorder.java: New test.

2005-12-02  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/FileInputStream/security.java: Catch
	exceptions generated by unexpected permission checks..
	* gnu/testlet/java/io/FileOutputStream/security.java: Likewise.

2005-12-02  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/RandomAccessFile/security.java: New tests.

2005-12-02  Gary Benson <gbenson@redhat.com>
