@@ -1,3 +1,7 @@
+2005-12-07  Anthony Green  <green@redhat.com>
+
+	* gnu/testlet/java/net/DatagramSocket/bind.java: New file.
+
 2005-12-06  Anthony Balkissoon  <abalkiss@redhat.com>
 
 	* gnu/testlet/javax/swing/BoxLayout/maximumLayoutSize2.java: New file.
